@@ -1,3 +1,9 @@
+2007-06-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/psd-load.c: applied slightly modified patch from
+	Eric Ross that adds support for loading long layer names from the
+	extra layer data section (bug #445316).
+
 2007-06-11  Sven Neumann  <sven@gimp.org>
 
 	Applied patch from Zbigniew Chyla that further improves the
